backend/deployment.yml
#Deployment 오브젝트의 API 버젼
apiVersion: apps/v1
#생성할 오브젝트 type
kind: Deployment
metadata:
  #오브젝트 이름
  name: backend
  namespace: backend
  #deployment를 "app=backend"로 레이블
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 1000m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 1024Mi
          #사용할 이미지, tag 없으니 latest로 사용
          image: ghcr.io/briankim913/weekly4_kubernetes:1.3
          #쿠버네티스에게 로컬에 이미자가 없으면 pull 하도록
          imagePullPolicy: IfNotPresent
          lifecycle:
            #graceful shutdown을 위한 SIGTERM메세지 보내기 전에, kubernetes에게 5초 기다리라고 명령어 입력
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 5"]
          ports:
            - containerPort: 9001
